# muhendisal-platform

./: .gitignore  CONTENT_AUDIT_CAPA.md  DEEP_AUDIT_CAPA_v2.md  DEEP_AUDIT_CAPA_v3.md  README.md  TEMIZLIK_CAPA_v1.md  ecosystem.config.js  mkdocs.yml  requirements.txt
.claude/: settings.json
.claude/agents/: arastirmaci.md  gorselci.md  okuyucu.md
backend/: __init__.py  database.py  main.py  models.py  rate_limit.py  schemas.py
backend/routes/: __init__.py  auth.py  progress.py  quiz.py  streak_feedback.py  xp.py
docs/: dashboard.md  hakkimda.md  index.md  yazim-kurallari.md
docs/assets/: custom.css
docs/assets/js/: api-client.js  app.js  code-editor.js  dashboard.js  ekosistem.js  loader.js  progress.js  quiz.js
docs/bolum-0/: 01-vps-linux.md  02-python-venv.md  03-ollama.md  04-fastapi.md  05-ilk-ai-servisi.md  index.md
docs/bolum-1/: 01-ai-engineer-nedir.md  02-ai-vs-ml-engineer.md  03-ekosistem.md  04-yol-secimi.md  index.md
docs/bolum-10/: 01-linkedin.md  02-mulakat.md  03-acik-kaynak.md  04-ileri-konular.md  05-topluluk.md  index.md
docs/bolum-2/: 01-llm-temelleri.md  02-token-baglam.md  03-sampling.md  04-sistem-prompt.md  05-few-shot-cot.md  06-sablonlar.md  07-prompt-injection.md  08-test-degerlendirme.md  index.md
docs/bolum-3/: 01-embedding-nedir.md  02-modeller.md  03-vector-db.md  04-qdrant.md  05-semantic-search.md  index.md
docs/bolum-4/: 01-rag-nedir.md  02-chunking.md  03-retrieval.md  04-context-eng.md  05-degerlendirme.md  06-langchain.md  07-llamaindex.md  08-production.md  index.md
docs/bolum-5/: 01-finetune-nedir.md  02-karar.md  03-lora.md  04-hf-pratik.md  index.md
docs/bolum-6/: 01-agent-nedir.md  02-tool-calling.md  03-mcp.md  04-mcp-server.md  05-multi-agent.md  06-claude-sdk.md  07-langchain.md  08-production.md  index.md
docs/bolum-7/: 01-goruntu.md  02-ses.md  03-video.md  04-vision-language.md  index.md
docs/bolum-8/: 01-tehditler.md  02-etik.md  03-maliyet.md  04-loglama.md  05-hata-yonetimi.md  06-checklist.md  index.md
docs/bolum-9/: 01-docker.md  02-cloud.md  03-cicd.md  04-proje-1.md  05-proje-2.md  06-proje-3.md  07-github.md  index.md
examples/icerik-ozet-agent/: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
examples/icerik-ozet-agent/agents/: evaluator.py  publisher.py  radar.py  yazar.py
examples/icerik-ozet-agent/db/: schema.sql
examples/icerik-ozet-agent/tests/: test_pipeline.py
examples/rag-chatbot/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
examples/rag-chatbot/.github/workflows/: deploy.yml
examples/rag-chatbot/app/: claude.py  main.py  rag.py
examples/rag-chatbot/app/static/: style.css
examples/rag-chatbot/app/templates/: _answer.html  index.html
examples/rag-chatbot/tests/: test_api.py  test_claude.py  test_rag.py
examples/semantic-search/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
examples/semantic-search/.github/workflows/: ci.yml
examples/semantic-search/app/: engine.py  main.py
examples/semantic-search/tests/: test_api.py  test_engine.py  test_upsert_search.py
examples/tahta-asistani/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
examples/tahta-asistani/app/: __init__.py  main.py
examples/tahta-asistani/tests/: __init__.py  test_main.py
hooks/: pre_build.py
includes/: glossary.md
overrides/: main.html
scripts/: backup_db.sh  gen_dashboard_pages.py  init_pages.py  persona-kutu-format.py  rebuild.sh
