[project]
name = "icerik-ozet-agent"
version = "0.1.0"
description = "Türkçe AI haberleri günlük özet multi-agent pipeline — MühendisAl Bölüm 6 referans proje"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
