[project]
name = "rag-chatbot"
version = "0.1.0"
description = "PDF RAG Chatbot — FastAPI + Qdrant + Voyage AI + Claude"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.46.0",
    "anthropic>=0.96.0",
    "qdrant-client==1.17.1",
    "voyageai>=0.3.0",
    "pypdf==6.10.2",
    "jinja2==3.1.6",
    "python-multipart>=0.0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI Depends/File/Form default'ları idiomatic — bu kütüphane için devre dışı
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
