[project]
name = "semantic-search"
version = "0.1.0"
description = "Türkçe haber başlığı semantic search — FastAPI + Qdrant + Voyage AI"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.46.0",
    "voyageai>=0.3.0",
    "qdrant-client==1.17.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
