[project]
name = "tahta-asistani"
version = "0.1.0"
description = "Tahta fotoğrafı → ders özeti + quiz (Claude vision + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.96.0",
    "fastapi==0.136.0",
    "uvicorn[standard]==0.46.0",
    "python-multipart==0.0.19",
    "pydantic==2.11.0",
    "pillow==12.2.0",
    "python-json-logger==4.1.0",
    "slowapi==0.1.9",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
extend-exclude = ["tests/test_main.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
